test/fail/entitynulltype.app
// Attribute type Null is not allowed in attribute authoredPapers

application test

section datamodel

  entity User {
    authoredPapers :: Null
  }